--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 
 
             <div class="col-md-6 col-lg-6 col-xl-6 mx-auto mt-6 text-end">
-                <h6 class="text-uppercase mb-4 font-weight-bold">Contactame</h6>
+                <h6 class="text-uppercase mb-4 font-weight-bold">Contáctame</h6>
 
                 <a
                 class="btn btn-primary btn-floating m-1"
